<resources>
    <!-- Page1(Main)-->
    <string name="app_name">Ebook</string>
    <string name="trubabook">Truba Book</string>
    <string name="general">General</string>
    <string name="start">START</string>
    <string name="desc1">Image</string>


    <!-- Page2(login)-->
    <string name="login_page1">LOGIN PAGE</string>
    <string name="sign_in1">SIGN IN</string>
    <string name="sign_up1">SIGN UP</string>
    <string name="your_email_id1">Your email id</string>
    <string name="your_password1">******</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="desc2">Image</string>


    <!-- Page3(signup)-->
    <string name="sign_up2">SIGN UP</string>
    <string name="name2">Name</string>
    <string name="email2">Email</string>
    <string name="password2">Password</string>
    <string name="your_name2">Your name</string>
    <string name="your_email2">Your email id</string>
    <string name="your_password2">*****</string>
    <string name="create_account2">CREATE ACCOUNT</string>
    <string name="desc3">Image</string>


    <!--connectivity-->
    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="passworderror">The password must contain at least 8 characters,at least one letter and one number</string>


    <!--Page4(inner)-->
    <string name="Welcome">Welcome</string>
    <string name="Userprofile">User Profile</string>
    <string name="books">Books</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="favourites">Favourites</string>
    <string name="downloads">Downloads</string>

    <string name="desc4">image</string>
    <string name="desc5">image</string>
    <string name="desc6">image</string>
    <string name="desc7">image</string>
    <string name="desc8">image</string>
    <string name="desc9">image</string>

    <!--Page5(settings)-->
    <string name="setting">Settings</string>
    <string name="change_theme">Change Theme</string>
    <string name="notification">Notification</string>
    <string name="contUs">Contact Us</string>
    <string name="help">help</string>
    <string name="report">Report a Problem</string>
    <string name="about_ebook">About Ebook</string>


</resources>