<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Inner_page">

    <LinearLayout
        android:id="@+id/parentViewInnerPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background = "#ffffff"
        android:orientation="vertical"
        android:weightSum = "10"
        app:layout_constraintBaseline_toBaselineOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.3">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="151dp"
                android:layout_marginBottom="48dp"
                android:contentDescription="@string/desc4"
                android:src="@drawable/welcome" />

            <TextView
                android:id="@+id/greet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="91dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="92dp"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold">

            </TextView>

        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:padding="15dp"
            android:rowCount="3">

            <androidx.cardview.widget.CardView
                android:id="@+id/d1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="#257"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="92dp"
                        android:layout_height="95dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/desc5"
                        android:src="@drawable/user"/>

                    <TextView
                        android:id="@+id/user_prof"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/Userprofile"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold">

                    </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/d2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="#257"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="86dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/desc5"
                        android:src="@drawable/books"/>

                    <TextView
                        android:id="@+id/book"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/books"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold">
                    </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/d3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="#257"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="87dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/desc6"
                        android:src="@drawable/settings"/>

                    <TextView
                        android:id="@+id/setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/settings"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold">

                    </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/d4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="#257"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="108dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/desc7"
                        android:src="@drawable/logout"/>

                    <TextView
                        android:id="@+id/logout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/logout"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold">

                    </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/d5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="#257"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/desc8"
                        android:src="@drawable/journals"/>

                    <TextView
                        android:id="@+id/journal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Journal"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold">

                    </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/d6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="#257"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/desc9"
                        android:src="@drawable/download"/>

                    <TextView
                        android:id="@+id/download"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/downloads"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold">

                    </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>